# glufire

./: .gitignore  01_promoter_fit.py  02_splitT7_AND_model.py  03_tx_tl_to_glu.py  04_diffusion_pde.py  05_cobrapy_dfba_template.py  DATA_EXPLANATION.md  DEVELOPMENT_PACKAGING.md  README.md  SCRIPT_DOCUMENTATION.md  config_manager.py  debug_run.py  generate_final_analysis.py  main.py  parameter_externalization_plan.md  pyproject.toml  requirements.txt  run_all.py  run_analysis.py  run_simple.py
data/: pLR_T_curve.csv  pPept_O2_curve.csv  splitT7_scan.csv
glufire/: cli.py
glufire/models/: and_gate.py  diffusion_pk_neurotoxicity.py  glu_metabolism.py  glu_metabolism_en.py
models/: and_gate.py  diffusion_pk.py  glu_metabolism.py  glu_metabolism_en.py  integrated_model.py  pk_toxicity.py
params/: and_gate_params.json  diffusion_params.json  glu_metabolism_params.json  promoters.json  splitT7.json
results/: drylab.html  neurotox_summary.txt
scripts/: assess_neurotoxicity.py
