[project]
name = "glufire"
version = "0.1.0"
description = "A toolkit for modeling an environmental AND logic gate for cancer therapy, focusing on glutamate-induced ferroptosis."
readme = "README.md"
requires-python = ">=3.10" # Changed from 3.13 to 3.10 for broader compatibility
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.2",
    "pandas>=1.3.0",
    "click>=8.0.0" # Added click for CLI
]

[project.scripts]
glufire = "glufire.cli:main"

[tool.setuptools.packages.find]
where = ["glufire"]
